syntax = "proto3";

option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message BaseCall {
  string uuid = 1;
  string clid = 4;
  string clna = 7;
  string dest = 10;
  string dirc = 13;
  google.protobuf.Timestamp stti = 16;
  int32 durs = 19;
  int32 bils = 22;
  bool recd = 25;
  int32 recs = 28;
  string recl = 31;
  string rtag = 34;
  int64 epos = 37;
  int64 epoa = 40;
  int64 epoe = 43;
  string wbye = 46;
  string hang = 49;
  string code = 52;
}

message SaveBaseCallRequest { BaseCall base_call = 1; }

service BaseCallService {
  rpc SaveBaseCall(SaveBaseCallRequest) returns (google.protobuf.Empty);
}